[gd_scene load_steps=27 format=3 uid="uid://c4rjmy1oo3gtk"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_ap05o"]
[ext_resource type="Texture2D" uid="uid://c1lia2po63yo3" path="res://icon.svg" id="3_2lrkp"]
[ext_resource type="PackedScene" uid="uid://bw7apmvugkrpk" path="res://scenes/player/hands.tscn" id="4_4c4ac"]
[ext_resource type="Texture2D" uid="uid://ekpgfegrjq2d" path="res://assets/characters/astronaut walk.png" id="5_822xr"]
[ext_resource type="Texture2D" uid="uid://cm0nar47hlmlf" path="res://assets/characters/idle.png" id="5_n6dmj"]
[ext_resource type="Texture2D" uid="uid://b3xtrjievvr5t" path="res://assets/ui/empty_bar.png" id="6_indbp"]
[ext_resource type="Texture2D" uid="uid://c4c7i02hal804" path="res://assets/ui/bar.png" id="7_33u5l"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aj3m1"]
radius = 6.0
height = 20.0

[sub_resource type="Animation" id="Animation_08qt2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shield/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("shield/Sprite2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2rxyj"]
resource_name = "shield_equip"
length = 1.00002
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shield/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("shield/Sprite2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_k5n4o"]
resource_name = "health_bar"
length = 1.00003
step = 0.333333

[sub_resource type="AnimationLibrary" id="AnimationLibrary_17tqs"]
_data = {
"RESET": SubResource("Animation_08qt2"),
"health_bar": SubResource("Animation_k5n4o"),
"shield_equip": SubResource("Animation_2rxyj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_481vx"]
radius = 22.0227

[sub_resource type="AtlasTexture" id="AtlasTexture_tb5hn"]
atlas = ExtResource("5_n6dmj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvbv3"]
atlas = ExtResource("5_n6dmj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmc27"]
atlas = ExtResource("5_n6dmj")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_36sad"]
atlas = ExtResource("5_n6dmj")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_36wok"]
atlas = ExtResource("5_822xr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4w3q"]
atlas = ExtResource("5_822xr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtvsh"]
atlas = ExtResource("5_822xr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukgvk"]
atlas = ExtResource("5_822xr")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dboc"]
atlas = ExtResource("5_822xr")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxo87"]
atlas = ExtResource("5_822xr")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iia1g"]
atlas = ExtResource("5_822xr")
region = Rect2(0, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g6mju"]
animations = [{
"frames": [{
"duration": 10.5,
"texture": SubResource("AtlasTexture_tb5hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvbv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmc27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36sad")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36wok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4w3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtvsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukgvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dboc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxo87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iia1g")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6yse8"]
radius = 7.78621

[node name="player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(3, 3)
script = ExtResource("1_ap05o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_aj3m1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_17tqs")
}

[node name="shield" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="Sprite2D2" type="Sprite2D" parent="shield"]
visible = false
position = Vector2(40, -2)
scale = Vector2(0.140625, 0.53125)
texture = ExtResource("3_2lrkp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="shield"]
shape = SubResource("CircleShape2D_481vx")
disabled = true

[node name="hands" parent="." instance=ExtResource("4_4c4ac")]
position = Vector2(6, -0.25)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_g6mju")
animation = &"run"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="health" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
offset_left = -105.0
offset_top = -53.0
offset_right = -73.0
offset_bottom = -37.0
max_value = 90.0
value = 90.0
texture_under = ExtResource("6_indbp")
texture_progress = ExtResource("7_33u5l")
texture_progress_offset = Vector2(12.74, -6)

[node name="hurt_box" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
shape = SubResource("CircleShape2D_6yse8")

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="area_entered" from="shield" to="." method="_on_shield_area_entered"]
[connection signal="body_entered" from="shield" to="." method="_on_shield_body_entered"]
[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="hurt_box" to="." method="_on_hurt_box_body_entered"]
